[package]
name = "cooplan-amqp-api-shared"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared code for the Cooplan API providers & consumers"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Third party dependencies

# JSON
serde = { version = "1.0.141", features = ["derive"] }
serde_json = "1.0.82"